[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
flate2 = "1.0.30"
lazy_static = "1.5.0"
rustls = "0.23.11"
thiserror = "1"
webpki-roots = "0.26.3"
