[package]
name = "octo-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
thiserror = { workspace = true }
unicode-segmentation = "1.11.0"
octo-http = { path = "../http" }
octo-url = { path = "../url" }

[lints]
workspace = true
