[package]
name = "octo-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
iced = { git = "https://github.com/iced-rs/iced.git", rev = "fd593f8", features = ["advanced"] }
thiserror = { workspace = true }
unicode-segmentation = "1.11.0"
octo-http = { path = "../http" }
octo-url = { path = "../url" }

[lints]
workspace = true
