[package]
name = "octo-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = "1.11.0"
octo-http = { path = "../http" }
octo-url = { path = "../url" }
eframe = { version = "0.28.1", features = ["wgpu"] }

[lints]
workspace = true
